trying to fix mobile overflow issue - removing animation transform

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -9,6 +9,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
+  color: white;
   background-color: #3141a8;
 }
 
@@ -31,7 +32,7 @@ nav {
 }
 
 .nav-links a {
-  color: #fff;
+  color: inherit;
   text-decoration: none;
   letter-spacing: 3px;
   font-weight: bold;
@@ -75,17 +76,13 @@ nav {
     right: 0px;
     height: 75vh;
     top: 8.25vh;
-    background-color: #3141a8;
+    color: transparent;
+    background-color: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
-    transform: translate(100%);
-    transition: transform 0.25s ease;
-    z-index:1;
-   }
-   .nav-links li {
-     opacity: 0;
+    z-index:-25;
    }
   .burger {
     display: block;
@@ -93,7 +90,9 @@ nav {
 }
 
 .nav-active {
-  transform: none;
+  z-index:25;
+  color: #fff;
+  background-color: #3141a8;
 }
 
 @keyframes navLinkFade {
